--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+  <style>
+    :root {
+      /* --base-font-size: 14px; */
+      --content-max-width: 75%;
+    }
+  </style>
 </head>
 
 <body>
@@ -49,6 +55,9 @@
         },
         isExpected: true
       },
+      themeable: {
+        readyTransition: true
+      }
     }
   </script>
   <!-- Docsify v4 -->
